# django-admin-email-2fa

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
src/admin_email_2fa/: apps.py  exceptions.py  forms.py  middleware.py  otp.py  settings.py  urls.py  utils.py  views.py
src/admin_email_2fa/templates/admin_email_2fa/: email.html  verification.html
tests/: conftest.py  test_settings.py  test_urls.py
tests/test_app/: test_middleware.py  test_otp.py  test_utils.py  test_views.py
